fix / and checkstyle